# python-namespace-demo-base

./: README.md  pyproject.toml
src/namespace_demo/: main.py
src/namespace_demo/base/: base_module.py  shared.py
