[tool.poetry]
name = "namespace_demo_base"
version = "0.2.0"
description = ""
authors = ["Sury Soni <suryasoni@gmail.com>"]
readme = "README.md"
packages = [
    { include = "namespace_demo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
