[tool.poetry]
name = "python-namespace-demo-base"
version = "0.4.0"
description = "base"
authors = ["Sury Soni <suryasoni@gmail.com>"]
readme = "README.md"
packages = [
    { include = "namespace_demo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.scripts]
demo-cli = "namespace_demo.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
